fix params spacing - make popup position css class-based

--- a/framework.css
+++ b/framework.css
@@ -31,7 +31,6 @@
 }
 
 * {
-  font-family: "Raleway", sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
